<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="354dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_value"
            />

        <EditText
            android:id="@+id/numberInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="Write a number"
            android:ems="10"
            android:inputType="number"
            android:text="@string/enter_number"
            android:visibility="visible"
            android:hint="@string/enter_number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/base_text"
            android:layout_marginTop="16dp"
            />

        <Spinner
            android:id="@+id/baseSpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            android:hint="@string/calculate"
            android:text="@string/calculate" />

        <TextView
            android:id="@+id/convertedNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            android:text="@string/converted_number"
            android:hint="@string/converted_number"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>